# task-tracker-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/agents/: docs-writer.agent.md  researcher.agent.md  review-github-issue.agent.md  reviewer.agent.md  test-engineer.agent.md
.github/hooks/: quality-gate.json  security-scan.json
.github/instructions/: tests.instructions.md
.github/skills/db-migration/: SKILL.md  migration-template.sql
.github/workflows/: backend-tests.yml
backend/: .env.example  .gitignore  README.md  VALIDATION.md  __init__.py  alembic.ini  database.py  demo.py  main.py  pyproject.toml  schemas.py  test_main.py  test_priority_integration.py
backend/alembic/versions/: 091bf912e34f_add_user_authentication.py  3281b5f4d783_initial_migration_create_tasks_table.py  a50c4f6c734d_add_priority_field_to_tasks.py  d3f4e1c9b7a2_add_comments_table.py
backend/app/: config.py  database.py  main.py  rate_limiter.py  schemas.py  test_auth.py  test_main.py  test_rate_limiting.py  test_validation.py
backend/app/dependencies/: auth.py
backend/app/middleware/: __init__.py  validation.py
backend/app/routes/: __init__.py  auth.py
backend/app/services/: auth_service.py  task_service.py
backend/app/utils/: sanitizer.py  security.py
backend/data/: tasks.db.backup
